# TermoSmart

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/HOME_ASSISTANT/: HomeAssistant.c  HomeAssistant.h
main/LVGL_UI/: Dashboard.c  Dashboard.h
main/MQTT/: mqttClient.c  mqttClient.h
main/RGB/: RGB.c  RGB.h
main/SENSORS/: TemperatureTermo.c  TemperatureTermo.h
main/Wireless/: WifiHandler.c  WifiHandler.h
