idf_component_register(
                         SRCS "main.c" 
                              "LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c" 
                              "LCD_Driver/ST7789.c"
                              "LVGL_Driver/LVGL_Driver.c"
                              "LVGL_UI/Dashboard.c"
                              "SD_Card/SD_SPI.c"
                              "RGB/RGB.c"
                              "Wireless/WifiHandler.c"
                              "MQTT/mqttClient.c"
                              "HOME_ASSISTANT/HomeAssistant.c"
                              "SENSORS/TemperatureTermo.c"

                         INCLUDE_DIRS 
                              "./LCD_Driver/Vernon_ST7789T" 
                              "./LCD_Driver" 
                              "./LVGL_Driver" 
                              "./LVGL_UI" 
                              "./SD_Card"
                              "./RGB" 
                              "./Wireless"
                              "./MQTT"
                              "./HOME_ASSISTANT"
                              "./SENSORS"
                              "."
                       )
